content height fix, inner nav count spacing fix

--- a/src/ggrc/assets/stylesheets/_lhs.scss
+++ b/src/ggrc/assets/stylesheets/_lhs.scss
@@ -434,7 +434,6 @@
     }
     i {
       margin-top: 6px;
-      margin-right: 3px;
       @include opacity(0.55);
     }
     li.active {
